--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,14 @@ services:
       - "8969:8000"
     depends_on:
       - db
+    links:
+      - db:db
+    networks:
+      - djangonetwork
 
   db:
     image: postgres:latest
     restart: always
-    hostname: localhost
     volumes:
       - ./data/db:/var/lib/postgresql/data
     ports:
@@ -23,4 +26,10 @@ services:
        - POSTGRES_DB=postgres
        - POSTGRES_USER=postgres
        - POSTGRES_PASSWORD=postgres
-       - POSTGRES_HOST_AUTH_METHOD=trust
+       - POSTGRES_HOST_AUTH_METHOD=trust#
+    networks:
+      - djangonetwork
+
+networks:
+  djangonetwork:
+    driver: bridge
