--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,6 @@ services:
       - db
     links:
       - db:db
-    networks:
-      - djangonetwork
 
   db:
     image: postgres:latest
@@ -26,10 +24,4 @@ services:
        - POSTGRES_DB=postgres
        - POSTGRES_USER=postgres
        - POSTGRES_PASSWORD=postgres
-       - POSTGRES_HOST_AUTH_METHOD=trust#
-    networks:
-      - djangonetwork
-
-networks:
-  djangonetwork:
-    driver: bridge
+       - POSTGRES_HOST_AUTH_METHOD=trust
